# dtransform

./: LICENSE  README.md  pyproject.toml
dtransform/: __init__.py  dtransform.py
tests/: test.py
